--- a/map-ui/package.json
+++ b/map-ui/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "d3": "^5.12.0",
     "react": "^16.11.0",
+    "react-css-loaders": "0.0.5",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
     "react-simple-maps": "^1.0.0-beta.0"
